# Valyxo

./: .gitignore  CHANGELOG.md  LICENSE  NovaHub.spec  README!.md  README.md  run_tests.py  test_script_runtime.py  test_zencoder_integration.py
.github/workflows/: python-tests.yml  release.yml
Applications/Desktop/: ICONS.md  create-icons.js  package-lock.json  package.json
Applications/Desktop/src-tauri/: Cargo.toml  tauri.conf.json
Applications/Desktop/src-tauri/src/: main.rs
Applications/ServerGo/: .env.example  go.sum  start.bat  start.sh
Applications/ServerGo/cmd/server/: main.go
Applications/ServerGo/internal/config/: config.go
Applications/ServerGo/internal/handlers/: auth.go  projects.go  scripts.go  users.go
Applications/ServerNode/: .gitignore  API.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  QUICK_START.md  README.md  package-lock.json  package.json
Applications/ServerNode/examples/: client.js
Applications/ServerNode/src/: server.js
Applications/Website/: tsconfig.json
Applications/Website/CSS/: style.css
Applications/Website/HTML/: contact.html  download.html  index.html  online.html  project.html  why.html
Applications/Website/TypeScript/: animations.ts  main.ts  project.ts
Applications/Website/wasm/: Cargo.toml
Applications/Website/wasm/src/: lib.rs
Documents/: MANUALS.md  SECURITY_AUDIT.md  VALYXO_ARCHITECTURE.md  VALYXO_QUICK_START.md
Documents/manpages/: grep.man  jobs.man  languages.man  ls.man  man.man  nano.man  python.man  run.man  settings.man
Libraries/Native/: Cargo.toml  README.md  build.bat  build.sh  index.d.ts  index.js  package.json  test.js
Libraries/Native/src/: error.rs  file_ops.rs  git.rs  indexer.rs  lib.rs  process.rs  settings.rs  terminal.rs
Scripts/: commit.bat
Source/: Valyxo.py
Source/core/: manpages.py  themes.py
Source/valyxo/: __init__.py  script.py
Source/valyxo/core/: __init__.py  autocomplete.py  branding.py  constants.py  git.py  gpt.py  jobs.py  keybindings.py  man.py  packages.py  plugins.py  script_extensions.py  snippets.py  templates.py  theme_editor.py  utils.py
desktop/: .gitignore  BUILD.md  QUICK_START.md  README.md  package-lock.json  package.json
desktop/src/: main.js  preload.js  setup.js  titlebar.js
docs/manpages/: cat.man  cd.man  filesystem.man  kill.man  mkdir.man  novagpt.man  novahub.man  novascript.man  theme.man
examples/HelloWorld/: main.ns
server/: .env.example  start.bat  start.sh
server-go/: .env.example  README.md  go.mod
server-go/data/: valyxo.db
server-go/internal/config/: config.go
server-go/internal/db/: db.go
server-go/internal/middleware/: auth.go  security.go
server/examples/: example.html
server/src/: cache.js  db.js  logger.js  monitoring.js  server.js  swagger.js
server/src/middleware/: errorHandler.js  security.js  validators.js
server/src/routes/: projects.js
server/tests/: integration.test.js
src/: Novahub.py  Valyxo.py
src/valyxo/: script.py
src/valyxo/core/: __init__.py  branding.py  colors.py  constants.py  filesystem.py  gpt.py
tests/: test_mkdir.py
valyxo-native/: Cargo.toml  README.md
valyxo-native/src/: app.rs  buffer.rs  command_palette.rs  config.rs  editor.rs  file_tree.rs  git.rs  keybindings.rs  main.rs  syntax.rs  tabs.rs  theme.rs
website/: about.html  api.html  app.html  blog.html  changelog.html  community.html  contact.html  dashboard.html  docs.html  explore.html  feed.html  gpt.html  hub.html  index.html  login.html  profile.html  projects.html  register.html  roadmap.html  script.html  security.html  settings.html
website/HTML/: contact.html  download.html  index.html  online.html  project.html  why.html
website/JavaScript/: animations.js  beams.js  main.js
website/css/: style.css
website/js/: main.js
(+11 files in other folders)
