[package]
name = "valyxo"
version = "0.6.0"
edition = "2021"
authors = ["NesTea"]
description = "Valyxo - The fastest code editor, built in Rust"
license = "MIT"
repository = "https://github.com/SandwichEater577/Valyxo"

[[bin]]
name = "valyxo"
path = "src/main.rs"

[dependencies]
# GPU-accelerated UI
eframe = { version = "0.29", features = ["persistence", "wgpu"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders", "image"] }

# Image loading for icon
image = { version = "0.25", default-features = false, features = ["png"] }

# Text editing with rope data structure (O(log n) operations)
ropey = "1.6"

# Syntax highlighting
syntect = "5"

# File dialogs
rfd = "0.15"

# File watching
notify = "6"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync"] }

# Fast parallel operations
rayon = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File system
walkdir = "2"
ignore = "0.4"

# Fuzzy search
fuzzy-matcher = "0.3"

# Icons
egui-phosphor = "0.6"

# Git integration
git2 = "0.19"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Directories
dirs = "5"

# Time
chrono = "0.4"

# Clipboard
arboard = "3"

# Tree-sitter for advanced parsing (optional, for future)
# tree-sitter = "0.24"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.dev]
opt-level = 1  # Faster dev builds

[features]
default = []
