[package]
name = "valyxo-native"
version = "0.6.0"
edition = "2021"
authors = ["NesTea"]
description = "Native Rust backend for Valyxo - High-performance file operations, terminal, and more"
license = "MIT"
repository = "https://github.com/SandwichEater577/Valyxo"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS for Node.js bindings
napi = { version = "2", features = ["async", "serde-json", "tokio_rt"] }
napi-derive = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File operations
memmap2 = "0.9"
walkdir = "2"
ignore = "0.4"
globset = "0.4"
notify = "6"

# Terminal/PTY
portable-pty = "0.8"

# Git operations
git2 = "0.18"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
thiserror = "1"
once_cell = "1"
parking_lot = "0.12"
dashmap = "5"
rayon = "1"
regex = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Macros
lazy_static = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
