[package]
name = "valyxo-desktop"
version = "0.6.0"
description = "Valyxo Desktop App (Tauri)"
authors = ["NesTea"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open", "window-all" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
