[package]
name = "valyxo-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "console", "Response"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "wasm-streams"] }
